
JasperReports Change Log
===================================

JasperReports 0.6.7
-----------------------------------
- dots, spaces and other special characters allowed
in parameter, field and variable names;

- minor bug fixes and improvements;




JasperReports 0.6.6
-----------------------------------
- new "incrementType" and "incrementGroup" attributes added to allow 
incrementing variable values on page, column or group breaks and not
with every detail row;

- new "language" attribute added to allow writing report expressions 
in other languages, provided that a report compiler that knows how to 
interpret the specified language is used;

- new Groovy report compiler added as a sample to allow using the
Groovy language and its simplified syntax inside report expressions;

- the JRBshCompiler has been removed from the core library and provided
as a separate sample;

- minor bug fixes and improvements;




JasperReports 0.6.5
-----------------------------------
- JasperReports licensing model has been simplified and the library 
will be shipped only under the "GNU Lesser Public License" (LGPL);

- new "onErrorType" and "isLazy" attributes for image elements 
to allow customizing the engine's behavior for loading and displaying images;

- new sample showing how to use the JasperReports library inside a J2EE application
running on the JBoss Application Server;

- minor bug fixes and improvements;




JasperReports 0.6.4
-----------------------------------
- new report compiler that uses the Eclipse JDT Java compiler for faster compilation 
and simpler deployment;

- minor bug fixes and improvements;




JasperReports 0.6.3
-----------------------------------
- new <box> tag available for putting border around text and image elements
with independent properties such as color, style and padding on all four sides;

- new "isFloatColumnFooter" attribute to allow printing the column footer section
right after the detail lines and not only at the bottom of the page;
